--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ url: https://www.chrismeyns.xyz
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "/log"
 
 collections:
   category:
